# swhealth

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  conanfile.txt
.deployer/config/: conf.yaml
swcheck/: main.cpp
swcheck/config/: Config.cpp  Config.h
swcheck/container/: Container.cpp  Container.h
swcheck/healthcheck/: HealthChecker.h  HttpHealthChecker.cpp  HttpHealthChecker.h  HttpHealthCheckerTest.cpp
swcheck/http/: CprHttpClient.cpp  CprHttpClient.h  HttpClient.h
swcheck/monitor/: ServiceMonitor.cpp  ServiceMonitor.h
swcheck/tgclient/: TelegramClient.cpp  TelegramClient.h
